--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Slides</h1>
-    <a href="/slides/WebdevelopmentAnnoDazumal">Web Development Anno Dazumal</a>
+    <a href="/slides/WebdevelopmentAnnoDazumal/index.html">Web Development Anno Dazumal</a>
 </body>
 
 </html>
