--- a/slides/WebdevelopmentAnnoDazumal/index.html
+++ b/slides/WebdevelopmentAnnoDazumal/index.html
@@ -7,8 +7,8 @@
 		<title>Web Development Anno Dazumal</title>
 
 		<link rel="stylesheet" href="/revealjs/css/reveal.css">
-<!--		<link rel="stylesheet" href="/revealjs/css/theme/beige.css">-->
-		<link rel="stylesheet" href="/revealjs/css/theme/moon.css">
+		<link rel="stylesheet" href="/revealjs/css/theme/beige.css">
+		<!--<link rel="stylesheet" href="/revealjs/css/theme/moon.css">-->
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="/revealjs/lib/css/zenburn.css">
@@ -24,25 +24,48 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/revealjs/js/reveal.js"></script>
+
+		<style>
+			.time {
+				position: absolute;
+				top: 0;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown>
-					<script type="text/template">
-						# Eine kleine Geschichte der Web-Entwicklung
-					</script>
-				</section>
 				<section data-transition="zoom">
-					<section><h1>Hyper Text Markup Language</h1></section>
+					<section><h1>Die Geschichte der Web-Entwicklung</h1></section>
 					<section data-markdown>
 						<script type="text/template">
-							* HTTP?
-							* Statische Inhalte
-							* Hyperlinks
-							```
-							 <html>jojo</html>
-							```
+							# Agenda
+
+							* HTML/CSS
+							* Homepages
+							* DHTML
+							* JavaScript
+							* XMLHttpRequest/AJAX
+							* Flash
+							* 
+						</script>
+					</section>
+				</section>
+				<section data-transition="zoom">
+					<section><h1><u>H</u>yper<u>t</u>ext <u>M</u>arkup <u>L</u>anguage</h1><span>1989</span></section>
+					<section data-markdown>
+						<script type="text/template">
+							Tim Berners-Lee (1989):
+								<blockquote>"The WorldWideWeb (W3) is a wide-area hypermedia information retrieval initiative aiming to give universal access to a large universe of documents."</blockquote>
+						        
+							* Idee des WorldWideWeb: Austausch von Forschungsergebnissen auf möglichst einfache Art und Weise.
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							## HTML/CSS 1992-1995:
+							* Definition der Tags und Basisstruktur
+							* W3C übernimmt offizielle Standardisierung
 						</script>
 					</section>
 				</section>
@@ -50,12 +73,10 @@
 					<section><h1>Wie, Du hast noch keine Homepage?</h1></section>
 					<section data-markdown>
 						<script type="text/template">
-							* Zeit der sog. "dot-com"-Blase
-							  * Viele Firmen stürzen sich auf die neue Technologie
-							  * Viele Firmen sind hoffnungslos überbewertet
+							* Zeit der sog. "Dotcom-Blase""
 							* Eigene Homepages
 							  * Webspace und Rootserver für den privatgebrauch werden immer erschwinglicher
-							  *
+							  * Animierte Gifs
 							* CGI/Perl
 							* PHP
 						</script>
@@ -65,16 +86,11 @@
 					<section><h1>Darfs etwas dynamischer sein?</h1></section>
 					<section data-markdown>
 						<script type="text/template">
+							* DHTML
+							* JavaScript
+							* JScript
 							* Java Applets
 							  * "Normale" Java-Anwendungen im Browser
-						</script>
-					</section>
-				</section>
-				<section section data-transition="zoom">
-					<section><h1>Die Büchse der Panorra</h1></section>
-					<section data-markdown>
-						<script type="text/template">
-							# JavaScript
 						</script>
 					</section>
 				</section>
@@ -83,16 +99,6 @@
 					<section data-markdown>
 						<script type="text/template">
 							# AJAX
-						</script>
-					</section>
-				</section>
-				<section section data-transition="zoom">
-					<section><h1>Spielen im Browser?</h1></section>
-					<section data-markdown>
-						<script type="text/template">
-							# DHTML
-
-							* SVG??
 						</script>
 					</section>
 				</section>
@@ -106,16 +112,12 @@
 					</section>
 				</section>
 				<section section data-transition="zoom">
-					<section><h1>"Browserkrieg"</h1></section>
+					<section><h1>"Browserkrieg"</h1><span>1994 - Heute</span></section>
 					<section data-markdown>
 						<script type="text/template">
+							<img src="Browser_Wars_(en).svg" width="50%" />
 							* Browserhersteller kämpfen um Marktanteile
-							  * Internet Explorer
-							  * Netscape Navigator
-							  * Opera
-							  * Google Chrome
-							  * Firefox
-							* Leider wird der HTML Standard (insbesondere CSS) von unterschiedlichen Browsern unterschiedlich interpretiert
+							* Um sich von der Masse abzuheben, erfinden einzelne Hersteller neue nicht im Standard vorgesehene Funktionen
 							* Folge: Browserweichen und Spezialisierung
 						</script>
 					</section>
