WDAD - Add css sucks image

--- a/slides/WebdevelopmentAnnoDazumal/index.html
+++ b/slides/WebdevelopmentAnnoDazumal/index.html
@@ -36,11 +36,11 @@
 							* 1989 - HTML/CSS
 							* 199x - Homepages
 							* 1995 - Dynamisches Web
-							* 1995 - Browserkrieg  
+							* 1995 - Browserkrieg
 							* 2003 - Web 2.0
 							* 2009 - Cross Plattform
 							* 2014 - HTML5/CSS3
-							* 2016 - Was kommt dann?  
+							* 2016 - Was kommt dann?
 						</script>
 					</section>
 				</section>
@@ -51,7 +51,7 @@
 							Tim Berners-Lee (1989):
 							<blockquote>"The WorldWideWeb (W3) is a wide-area hypermedia information retrieval initiative aiming to give universal access to a large universe of documents."</blockquote>
 
-							<aside class="notes">  
+							<aside class="notes">
 								<p>Idee ist am CERN entstanden</p>
 								<p>Idee des WorldWideWeb: Austausch von Forschungsergebnissen auf möglichst einfache Art und Weise.</p>
 							</aside>
@@ -106,6 +106,9 @@ with <A NAME=3 HREF=Commands.html>existing commands</A> .<P>
 							  * Flash
 							* Dynamische Inhalte
 							* Komplexe grafische Effekte
+
+							<img src="css-sucks.png" width="20%" style="border:none;box-shadow:none;" />
+
 						</script>
 					</section>
 				</section>
@@ -209,7 +212,7 @@ with <A NAME=3 HREF=Commands.html>existing commands</A> .<P>
 							  * Javascript auf Serverseite
 							* PhoneGap/Cordova
 							  * Javascript, HTML und CSS auf mobilen Endgeräten
-							
+
 							=> Explosionartige Ausbreitung von Javascript
 						</script>
 					</section>
@@ -225,6 +228,7 @@ with <A NAME=3 HREF=Commands.html>existing commands</A> .<P>
 							  * flex-Layout
 							  * Animationen
 							* etc.
+
 						</script>
 					</section>
 				</section>
